# mgkmc

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  README.md  __init__.py  config.yaml  config_fast.yaml  config_secant.yaml  debug_nan.py  debug_nan_with_flips.py  inspect_solver.py  plot_combined_summary_log.py  plot_summary_log.py  profile_aqs.py  profile_runner.py  pyproject.toml  rename_script.py  reproduce_crash.py  requirements.txt  run.py  run_simulation.py  setup.py  speed_test.py  temp_legacy_aqs.py  temp_legacy_barriers.py  temp_legacy_barriers_utf8.py  temp_test_features.py  test_barrier_physics.py  test_softening.py  test_vectorized.py
docs/: Makefile  conf.py  configuration.rst  examples.rst  index.rst  mgkmc.analysis.rst  mgkmc.rst  mgkmc.stz.rst  modules.rst
examples/: 01_uniaxial_tension.py  02_pure_shear.py  03_temperature_effects.py  04_checkpoints_and_restarts.py  _Elastic Stress-Strain Analysis Conditions .md  aqs_demo.py  aqs_demo_2.py  aqs_demo_3.py  aqs_demo_4.py  aqs_demo_5.py  aqs_demo_5_numba.py  aqs_demo_5_results.py  aqs_demo_5_visualize_cascade.py  aqs_demo_6.py  aqs_demo_6_numba.py  aqs_demo_6_results.py  checkpoint_demo.h5  checkpoint_demo.py  diagnose_initial_state.py  elastic_demo.py  inclusion.py  inclusion_final.vtu  inspect_debug.py  inspect_rates.py  kmc_demo_temperature.py  plane_stress_demo.py  plot_demo.py  postprocess_demo.py  shear_demo.py  sigma_z_0_epsilon_y_0.py  uniaxial_stress_demo.py  yz_strain_0_demo.py
mgkmc/: __init__.py  aqs.py  checkpoint.py  (+14 more)
mgkmc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+110 files in other folders)
