[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mgkmc"
version = "0.1.0"
description = "A library for FFT-based homogenization of metallic glasses"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "meshio",
    "pyfftw",
    "h5py",
    "numba",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
]


[project.urls]
"Homepage" = "https://github.com/example/mgkmc"
